--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -163,6 +163,12 @@
     }
 }
 
+// @media (max-width: 767px) {
+//     .catalog-info-public-cards-item {
+//         width: 19rem;
+//     }
+// }
+
 // Уникальные данные
 
 .catalog-info-unique {
