--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -167,7 +167,7 @@
         height: auto;
         overflow: visible;
         transition: all 0.3s ease 0s;
-        background-color: #0062FF;
+        background-color: $color-primary-60;
 
         display: flex;
         flex-direction: column;
