--- a/scss/_suppliers.scss
+++ b/scss/_suppliers.scss
@@ -161,3 +161,18 @@
     }
 }
 
+@media (max-width: 767px) {
+    .suppliers-list {
+        padding-left: .875rem;
+        &-item {
+            min-width: auto;
+            width: 100%;
+            margin-bottom: 1rem;
+
+            h4 {
+                font-size: 1.1rem;
+            }
+        }
+    }
+}
+
