Updated mobile version, added scripts for appending large section with 'scroll right' text

--- a/page--front.html.twig
+++ b/page--front.html.twig
@@ -149,7 +149,7 @@
       </div>
 
       <div class="client-path-bg blue-bg connect-bg">
-          <div class="title-container">
+          <div class="title-container padding">
               <h2 class="title-text-neutral title-container-number">03</h2> <h2 class="title-text-green text-green"><</h2> <h2 class="title-text-neutral">Как</h2> <h2 class="title-text-green text-green"> подключиться ></h2>
           </div>
           <div class="container-medium client-path">
@@ -289,7 +289,7 @@
       </div>
 
       <div class="news-bg dark-grey-bg">
-          <div class="title-container">
+          <div class="title-container padding">
               <h2 class="title-text-neutral title-container-number">05</h2> <h2 class="title-text-green text-green">< Блог </h2> <h2 class="title-text-neutral">API</h2> <h2 class="title-text-green text-green"> ></h2>
           </div>
           <div class="container-large news">
