Changed styling (mainly header and organization page) and added scripts to inject search and plus svg icons

--- a/scss/_catalog.scss
+++ b/scss/_catalog.scss
@@ -85,7 +85,7 @@
     height: 2px;
     width: 12.063rem;
     margin-left: 0;
-    background: #3A85FF;
+    background: $color-primary-50;
     border: none;
     transition: .3s ease-in-out;
     position: absolute;
