--- a/scss/_suppliers.scss
+++ b/scss/_suppliers.scss
@@ -78,7 +78,7 @@
         }
 
         &-email-link {
-            color: #3A85FF;
+            color: $color-primary-50;
             text-decoration: underline;
         }
 
