--- a/scss/_target-audience.scss
+++ b/scss/_target-audience.scss
@@ -96,7 +96,7 @@
         }
 
         .connect-instruction {
-            color: #3A85FF;
+            color: $color-primary-50;
             text-decoration: underline;
 
             &:hover {
