--- a/scss/_drupal-override-profile.scss
+++ b/scss/_drupal-override-profile.scss
@@ -36,12 +36,12 @@ article.personal-info {
 
 .tabs ul.tabs--primary li {
   background-color: transparent;
-  color: #3A85FF;
+  color: $color-primary-50;
   padding: .7rem 1rem;
 }
 
 .tabs ul.tabs--primary li.active {
-  background-color: #3A85FF;
+  background-color: $color-primary-50;
   color: #fff;
 }
 
