--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -73,7 +73,7 @@
             }
 
             .active {
-                color: #3A85FF;
+                color: $color-primary-50;
                 text-decoration-line: none;
             }
         }
