--- a/scss/_popular-api.scss
+++ b/scss/_popular-api.scss
@@ -47,9 +47,9 @@
 
 .popular-api-card:last-child {
     background-color: #000;
-    background-image: url("/images/card-bg-black.png");
-    background-repeat: no-repeat;
-    background-size: cover;
+    // background-image: url("/images/card-bg-black.png");
+    // background-repeat: no-repeat;
+    // background-size: cover;
     padding: 6.25rem 0 2rem 2rem;
 
     h1 {
