--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -5,10 +5,11 @@ $color-neutral-05: #F3F4F6;
 $color-neutral-10: #E5E7EB;
 $color-neutral-30: #B1B5BB;
 $color-neutral-50: #7B7E86;
+$color-neutral-70:#505258;
 $color-neutral-90: #22242A;
 $color-light-grey-bg: #2D2F35;
 $color-coldgrey-50: #7E8390;
-$color-primary-50: #307FFF;
+$color-primary-50: #3A85FF; //NEW COLOR
 $color-primary-60: #0062FF;
 
 $color-darkweb-text-primary: #E2E5E9;
